src/objects/DatatableAction__c.object
<CustomObject>
    <fields>
        <fullName>Component__c</fullName>
        <label>Component</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Datatable__c</fullName>
        <label>Datatable</label>
        <referenceTo>Datatable__c</referenceTo>
        <relationshipLabel>Datatable Actions</relationshipLabel>
        <relationshipName>DatatableActions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DisplaySettings__c</fullName>
        <label>Display Settings</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Desktop</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Icon__c</fullName>
        <label>Icon</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Navigation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Navigation</label>
        <referenceTo>Navigation__c</referenceTo>
        <relationshipLabel>Datatable Actions</relationshipLabel>
        <relationshipName>DatatableActions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SelectableRow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selectable Row</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Navigation</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Datatable Action</label>
    <listViews>
        <fullName>GlobalActions</fullName>
        <columns>NAME</columns>
        <columns>Label__c</columns>
        <columns>ExternalId__c</columns>
        <columns>Datatable__c</columns>
        <columns>Type__c</columns>
        <columns>Navigation__c</columns>
        <columns>Component__c</columns>
        <columns>DisplaySettings__c</columns>
        <columns>SelectableRow__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>DatatableAction__c.GlobalAction</value>
        </filters>
        <label>Global Actions</label>
    </listViews>
    <listViews>
        <fullName>RowActions</fullName>
        <columns>NAME</columns>
        <columns>Label__c</columns>
        <columns>ExternalId__c</columns>
        <columns>Datatable__c</columns>
        <columns>Type__c</columns>
        <columns>Navigation__c</columns>
        <columns>Component__c</columns>
        <columns>DisplaySettings__c</columns>
        <columns>SelectableRow__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>DatatableAction__c.RowAction</value>
        </filters>
        <label>Row Actions</label>
    </listViews>
    <nameField>
        <label>Datatable Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Datatable Actions</pluralLabel>
    <recordTypes>
        <fullName>GlobalAction</fullName>
        <active>true</active>
        <label>Global Action</label>
    </recordTypes>
    <recordTypes>
        <fullName>RowAction</fullName>
        <active>true</active>
        <label>Row Action</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CustomComponentTypeValidation</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(TEXT(Type__c) = &apos;Custom&apos;, ISBLANK( Component__c)) , true, false)</errorConditionFormula>
        <errorDisplayField>Component__c</errorDisplayField>
        <errorMessage>A Component should be specified for an Action of type Custom</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NavigationTypeValidation</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(TEXT(Type__c) = &apos;Navigation&apos;, ISBLANK( Navigation__c )) , true, false)</errorConditionFormula>
        <errorDisplayField>Navigation__c</errorDisplayField>
        <errorMessage>A Navigation lookup should be specified for an Action of type Navigation</errorMessage>
    </validationRules>
</CustomObject>